fixed alignment of project and blog grids

--- a/style.css
+++ b/style.css
@@ -113,9 +113,9 @@ nav {
   box-shadow: 0 0 0 3px rgba(62, 114, 86, 0.4);
 }
 
-.nav-menu {
+/* .nav-menu {
   padding-right: 10rem;
-}
+} */
 
 .nav-img {
   width: 1.25rem;
@@ -134,11 +134,15 @@ nav ul {
   display: inline-block;
 }
 
+.contact {
+  padding-top: 5rem;
+  padding-bottom: 5rem;
+}
+
 .about-me,
 .skills,
 .projects,
-.blogs,
-.contact {
+.blog {
   padding-top: 5rem;
   padding-bottom: 25rem;
 }
@@ -212,7 +216,7 @@ footer {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   grid-gap: 5rem;
-  margin: 1.5rem;
+  margin: 1.5rem auto;
   z-index: 2000;
   width: 80%;
 }
@@ -320,17 +324,23 @@ footer {
   justify-content: space-evenly;
 }
 
+/* .blog {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+} */
+
 .blog-grid {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   grid-gap: 5rem;
-  margin: 1.5rem;
+  margin: 1.5rem auto;
   width: 80%;
 }
 
 .blog-image {
   width: 100%;
-  height: 250px;
+  /* height: 250px; */
   object-fit: cover;
   border-radius: 10px;
   margin-bottom: 10px;
